--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,4 +8,5 @@ endmacro()
 _add_test(file_test)
 _add_test(file_descriptor_test)
 _add_test(mutex_test)
+_add_test(signal_test)
 _add_test(thread_test)
