--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,4 +9,5 @@ _add_test(file_test)
 _add_test(file_descriptor_test)
 _add_test(mutex_test)
 _add_test(signal_test)
+_add_test(socket_test)
 _add_test(thread_test)
