--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ endmacro()
 
 _add_test(file_test)
 _add_test(file_descriptor_test)
+_add_test(mmap_test)
 _add_test(mutex_test)
 _add_test(signal_test)
 _add_test(socket_test)
