--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,10 +5,10 @@ macro(_add_test name)
     add_test(${name} ${name})
 endmacro()
 
-_add_test(file_test)
-_add_test(file_descriptor_test)
-_add_test(thread_test)
-_add_test(mutex_test)
-_add_test(socket_test)
+_add_test(File_test)
+_add_test(FileDescriptor_test)
+_add_test(Thread_test)
+_add_test(Mutex_test)
+_add_test(Socket_test)
 _add_test(signal_test)
 _add_test(mmap_test)
